<resources>

    <string name="app_name">WODTimer</string>
    <string name="seconds">seconds</string>
    <string name="minute">minute</string>
    <string name="setting">Settings</string>

    <string name="permission_denied_title">Permission denied</string>
    <string name="permission_denied_message">If you reject permission, you can not use this service Please turn on permissions at [Setting] > [Permission]</string>

    <string name="record_format">%02d:%02d</string>
    <string name="record_setting_submit">Submit</string>
    <string name="record_setting_countdown">CountDown</string>
    <string name="record_setting_title">Title</string>

    <string name="video_list_title">Videos</string>

    <string name="setting_title">Settings</string>
    <string name="setting_element_title">Title</string>
    <string name="setting_element_countdown">CountDown</string>
    <string name="setting_element_countdown_valid">Please enter between 5 and 60 seconds.</string>
    <string name="setting_element_sound">Sound Record</string>
    <string name="setting_group_facing">Facing</string>
    <string name="setting_element_front">Front</string>
    <string name="setting_element_back">Back</string>
    <string name="setting_group_ratio">Ratio</string>
    <string name="setting_element_general">General</string>
    <string name="setting_element_instagram">Instagram (1:1)</string>
    <string name="setting_group_timer_type">Timer Type</string>
    <!-- 최대한 빨리 -->
    <string name="setting_element_timer_type_for_time">For Time</string>
    <!-- 정해진 시까지 -->
    <string name="setting_element_timer_type_time_cap">Time Cap</string>
    <!-- 가능한 많은 라운드 -->
    <string name="setting_element_timer_type_amrap">AMRAP</string>
    <!-- 매 분마다 -->
    <string name="setting_element_timer_type_emom">EMOM</string>
    <string name="setting_element_timer_type_minute">Minute</string>
    <string name="setting_element_date">Date</string>

</resources>
