<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.jess.wodtimer.presentation.setting.SettingViewModel" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@color/brand_white"
                            android:hint="@string/setting_element_title"
                            app:boxStrokeColor="@color/brand_blue"
                            app:counterEnabled="true"
                            app:counterMaxLength="50"
                            app:endIconMode="clear_text"
                            app:errorEnabled="true"
                            app:hintTextColor="@color/brand_blue">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="true"
                                android:gravity="top"
                                android:maxLines="5"
                                android:minLines="3"
                                android:text="@{vm.title}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@color/brand_white"
                            android:hint="@string/setting_element_countdown"
                            app:boxStrokeColor="@color/brand_blue"
                            app:hintTextColor="@color/brand_blue"
                            app:suffixText="@string/seconds">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_countdown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:maxLength="2"
                                android:maxLines="1"
                                android:text="@{String.valueOf(vm.countdown)}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/swc_sound"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:checked="@{vm.isSound()}"
                            android:paddingStart="5dp"
                            android:text="@string/setting_element_sound"
                            android:textSize="17dp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.core.widget.NestedScrollView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:background="@color/brand_white"
                android:fitsSystemWindows="true"
                app:liftOnScroll="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <com.jess.wodtimer.common.view.componet.HeaderView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:title="@string/setting_title" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_submit"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="24dp"
            android:layout_marginTop="20dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:maxLines="1"
            android:text="@string/record_setting_submit"
            android:textAllCaps="false"
            android:textColor="@color/brand_white"
            android:textStyle="bold"
            app:backgroundTint="@color/brand_blue"
            app:cornerRadius="8dp"
            app:iconPadding="24dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>

